# ulabel

./: 404.html  Makefile  README.md  docker-compose.yaml  index.html  objects.inv
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_label_created_at.py  0002_add_project_created_at.py  0003_unique_project_name.py  0004_create_import_jobs_table.py  0005_add_performance_indexes.py
backend/benchmarks/: locustfile.py
backend/docs/: how-to-guides.md  index.md
backend/docs/explanation/: api-design.md  architecture.md  database.md  development-log.md  image-ingestion.md  observability.md  tooling.md
backend/docs/how-to-guides/: adding-observability.md  grafana-dashboards.md  index.md  load-testing.md
backend/docs/reference/: index.md
backend/docs/tutorials/: getting-started.md  quick-start.md
backend/etc/prometheus/: prometheus.yml
backend/etc/promtail/: promtail.yml
backend/etc/tempo/: tempo.yml
backend/src/ulabel/: __init__.py  container.py
backend/tests/api/: test_autocomplete_labelers.py  test_create_assignment.py  test_exports.py  test_get_next_image.py  test_images.py  test_import_images.py  test_labelers.py  test_projects.py  test_stats.py  test_submit_label.py  test_tokens.py  test_upload_image.py
backend/tests/application/: test_add_image_to_project.py  test_add_labeler_to_project.py  test_create_assignment.py  test_create_project.py  test_expire_images_task.py  test_export_labels.py  (+8 more)
(+212 files in other folders)
